# pgspot

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  SECURITY.md  check.py  codes.py  formatters.py  gendoc  pgspot  pylintrc  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  shell.nix  state.py  test.sh  tox.ini  visitors.py
.github/: dependabot.yml
.github/workflows/: dependency-review.yml  publish.yml  test.yml  timescaledb.yml
src/pgspot/: cli.py  codes.py  formatters.py  path.py  plpgsql.py  state.py  visitors.py
test/expected/: created_schema.out  createfunc.out  do.out  exists.out  nested_searchpath.out  plpgsql_function.out  replace.out  search_path.out  security_definer.out  set_local.out  sql_function.out  unqualified_cte.out
test/sql/: created_schema.sql  createfunc.sql  do.sql  ignore.sql  nested_searchpath.sql  plpgsql_function.sql  range_function.sql  replace.sql  (+3 more)
testdata/: aggregate_tracking.sql  cast.sql  createfunc.sql  do.sql  dyn_foreach.sql  exists.sql  foreach_array.sql  loop.sql  nested_searchpath.sql  operator.sql  plpgsql_function.sql  ps009-simplified-case.sql  return_query.sql  search_path.sql  security_definer.sql  set_local.sql  sql_function.sql  while.sql
tests/: create_aggregate_test.py  format_string_test.py  function_set_search_path_leak_test.py  global_ignore_test.py  ignore_lang_test.py  plpgsql_path_if_test.py  plpgsql_path_loop_test.py  plpgsql_paths_test.py  search_path_test.py  snapshot_test.py  sql_accepting_function_test.py  util.py
(+23 files in other folders)
