[metadata]
name = pgspot
version = attr: pgspot.__version__
description = Spot vulnerabilities in postgres extension scripts
long_description = file: README.md
long_description_content_type = text/markdown
author = Timescale, Inc.
license = The PostgreSQL License
license_file = LICENSE
url = https://github.com/timescale/pgspot
project_urls =
    Bug Tracker = https://github.com/timescale/pgspot/issues
keywords = postgresql
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: PostgreSQL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.10

install_requires =
    pglast @ git+https://github.com/svenklemm/pglast@01853619c0ecc4fe531bb0cdbe1207cd090dcc71#egg=pglast-3.8

tests_require =
    pytest
    pytest-snapshot

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pgspot = pgspot.cli:run
